--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
   --bg-numbersDark: #9D9B9B;
   --fc-buttonsDark: #fff;
   --bg-footerButtons: #7A7A93;
+  --bg-menuStripesDark: #9D9B9B;
 }
 
 * {
@@ -31,6 +32,8 @@
   background-color: var(--bg-whiteStandard);
   display: flex;
   flex-direction: column;  
+  position: relative; 
+  overflow: hidden;
 }
 
 .dark .container-pai{
@@ -197,4 +200,113 @@
 
 span {
     color: var(--bg-calcButtons);
+}
+
+
+/* Menu de Configurações Overlay */
+.overlay-config {
+  position: absolute;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.35);
+  display: none;
+  z-index: 999;
+}
+
+.overlay-config.active {
+  display: block;
+}
+
+
+.config-panel {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background: #fff;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 700;
+}
+
+body.dark .config-panel {
+  background: var(--bg-darkStandard);
+  color: var(--bg-whiteStandard);
+}
+
+.logoMenu {
+  width: 25px;
+}
+
+.close-x {
+  position: absolute;
+  top: 5px;
+  right: 12px;
+  background: none;
+  border: none;
+  font-size: 30px;
+  z-index: 60;
+  cursor: pointer;
+}
+
+.dark .close-x {
+  color: var(--fc-buttonsDark);
+}
+
+.config-panel h2{
+  padding-top: 50px;
+}
+
+.config-menu {
+  list-style: none;
+  padding: 0;
+  margin-top: 20px;
+}
+
+.config-menu li {
+  list-style: none;
+  margin-bottom: 10px;
+}
+
+.item-bg {
+  display: inline-flex;
+  align-items: center; 
+  gap: 12px; 
+  width: 100%;     
+  background-color: var(--bg-header-standard);
+  color: var(--fc-buttonsStandard);
+  padding: 8px 12px;
+  font-weight: 700;
+  padding-left: 20px;
+  cursor: pointer;
+}
+
+.dark .item-bg{
+  background: var(--bg-menuStripesDark);
+  color: var(--fc-buttonsDark);
+}
+
+.dark .config-menu li{
+  background: var(--bg-menuStripesDark);
+}
+
+body.dark .config-menu li {
+  border-color: #333;
+}
+
+.dark #zoomIn img {
+  content: url("img/increaseZoomIcon_dark.png");
+}
+
+.dark #zoomOut img {
+  content: url("img/decreaseZoomIcon_dark.png");
+}
+
+.dark #questionIcon img {
+  content: url("img/questiontIcon_dark.png");
+}
+
+.dark #infoIcon img {
+  content: url("img/infoIcon_dark.png");
+}
+
+.dark .item-bg img{
+  content: url("img/Logo-dark.png");
 }
