--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-:root{
+:root {
   --bg-whiteStandard: #fff;
   --bg-header-standard: #D9D9D9;
   --bg-inputs-standard: #BABABA;
@@ -31,21 +31,21 @@
   height: 410px;
   background-color: var(--bg-whiteStandard);
   display: flex;
-  flex-direction: column;  
-  position: relative; 
+  flex-direction: column;
+  position: relative;
   overflow: hidden;
 }
 
-.dark .container-pai{
+.dark .container-pai {
   background-color: var(--bg-darkStandard);
 }
 
-.cabecalho{
-    background-color: var(--bg-header-standard);
-    padding: 6px 8px;
+.cabecalho {
+  background-color: var(--bg-header-standard);
+  padding: 6px 8px;
 }
 
-.dark .cabecalho{
+.dark .cabecalho {
   background-color: var(--bg-header-dark);
 }
 
@@ -60,7 +60,7 @@
 }
 
 .dark .cabecalho input,
-.dark .cabecalho textarea{
+.dark .cabecalho textarea {
   background-color: var(--bg-inputs-dark);
 }
 
@@ -93,7 +93,7 @@
   color: var(--fc-buttonsStandard);
 }
 
-.dark .rowCalculations button{
+.dark .rowCalculations button {
   color: var(--fc-buttonsDark);
 }
 
@@ -107,7 +107,7 @@
   margin: 15px 30px 0px 30px;
 }
 
-.dark .numbers-grid{
+.dark .numbers-grid {
   background-color: var(--bg-inputs-dark);
 }
 
@@ -121,7 +121,7 @@
   color: var(--fc-buttonsStandard);
 }
 
-.dark .numbers-grid button{
+.dark .numbers-grid button {
   background-color: var(--bg-numbersDark);
   color: var(--fc-buttonsDark);
 }
@@ -136,11 +136,11 @@
   font-weight: 700;
 }
 
-.dark .numbers-grid .del{
- background-color: var(--bg-deleteButton);
+.dark .numbers-grid .del {
+  background-color: var(--bg-deleteButton);
 }
 
-.dark .numbers-grid .equal{
+.dark .numbers-grid .equal {
   background-color: var(--bg-equalButton);
 }
 
@@ -160,7 +160,7 @@
   cursor: pointer;
 }
 
-.dark .rodape button{
+.dark .rodape button {
   background-color: var(--bg-footerButtons);
 }
 
@@ -169,11 +169,11 @@
   margin-top: 3px;
 }
 
-.rodape .logo img{
-    width: 35px;
+.rodape .logo img {
+  width: 35px;
 }
 
-.dark .rodape .logo img{
+.dark .rodape .logo img {
   content: url("img/Logo-dark.png");
 }
 
@@ -193,13 +193,13 @@
   color: var(--fc-buttonsStandard);
 }
 
-.dark .marca{
+.dark .marca {
   background-color: var(--bg-header-dark);
   color: var(--fc-buttonsDark);
 }
 
 span {
-    color: var(--bg-calcButtons);
+  color: var(--bg-calcButtons);
 }
 
 
@@ -244,13 +244,14 @@ body.dark .config-panel {
   font-size: 30px;
   z-index: 60;
   cursor: pointer;
+  transform-origin: top right;
 }
 
 .dark .close-x {
   color: var(--fc-buttonsDark);
 }
 
-.config-panel h2{
+.config-panel h2 {
   padding-top: 50px;
 }
 
@@ -267,9 +268,9 @@ body.dark .config-panel {
 
 .item-bg {
   display: inline-flex;
-  align-items: center; 
-  gap: 12px; 
-  width: 100%;     
+  align-items: center;
+  gap: 12px;
+  width: 100%;
   background-color: var(--bg-header-standard);
   color: var(--fc-buttonsStandard);
   padding: 8px 12px;
@@ -278,12 +279,12 @@ body.dark .config-panel {
   cursor: pointer;
 }
 
-.dark .item-bg{
+.dark .item-bg {
   background: var(--bg-menuStripesDark);
   color: var(--fc-buttonsDark);
 }
 
-.dark .config-menu li{
+.dark .config-menu li {
   background: var(--bg-menuStripesDark);
 }
 
@@ -307,6 +308,6 @@ body.dark .config-menu li {
   content: url("img/infoIcon_dark.png");
 }
 
-.dark .item-bg img{
+.dark .item-bg img {
   content: url("img/Logo-dark.png");
 }
