UPDATE: Inserindo funcionalidade de botão de Dúvidas Comuns no HTML, CSS e JS

--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@
   --fc-buttonsDark: #fff;
   --bg-footerButtons: #7A7A93;
   --bg-menuStripesDark: #9D9B9B;
+  --bg-questionMenuDark: #21b5d3;
+  --fc-questionMenuDark: #e9e9e9;
 }
 
 * {
@@ -207,7 +209,7 @@ span {
 .overlay-config {
   position: absolute;
   inset: 0;
-  background: rgba(0, 0, 0, 0.35);
+  background: rgba(0, 0, 0, 0.50);
   display: none;
   z-index: 999;
 }
@@ -310,4 +312,126 @@ body.dark .config-menu li {
 
 .dark .item-bg img {
   content: url("img/Logo-dark.png");
+}
+
+
+
+
+
+
+/* Novo Overlay de Dúvidas Comuns */
+.overlay-duvidas {
+  position: absolute;
+  inset: 0;
+  display: none;
+  z-index: 999;
+  background: rgba(0, 0, 0, 0.50);
+}
+
+.overlay-duvidas.active {
+  display: block;
+}
+
+.duvidas-panel {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background: var(--bg-whiteStandard);
+  padding: 20px 25px;
+  box-sizing: border-box;
+  border-top: 2px solid var(--bg-questionMenuDark);
+}
+
+.dark .duvidas-panel {
+  background: var(--bg-darkStandard);
+  color: var(--bg-whiteStandard);
+}
+
+.duvidas-panel h2 {
+  font-size: 22px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  color: var(--bg-questionMenuDark);
+}
+
+
+.duvidas-panel li {
+  margin-bottom: 12px;
+  font-size: 16px;
+  color: var(--fc-buttonsStandard);
+  cursor: pointer;
+}
+
+.dark .duvidas-panel li{
+  color: var(--bg-whiteStandard);
+}
+
+.question .answer {
+  display: none;
+  font-size: 14px;
+  color: var(--fc-buttonsStandard);
+  line-height: 1.5;
+  margin-top: 5px;
+  overflow: hidden;
+  height: 0;
+  transition: height 0.3s ease-out, padding 0.3s ease-out;
+}
+
+.question .answer ul li{              
+  font-size: 14px;             
+  line-height: 1.5;  
+  margin-bottom: 5px;           
+}
+
+.dark .question .answer ul li{
+  color: var(--fc-questionMenuDark);
+}
+
+.dark .question .answer {
+  color: var(--fc-questionMenuDark);
+}
+
+.question.active .answer {
+  display: block;
+  height: auto;
+}
+
+.question.active {
+  font-weight: bold;
+  color: var(--fc-buttonsStandard);
+  background: var(--bg-numberStandard);
+  padding: 10px;
+}
+
+.dark .question.active{
+  background: var(--bg-header-dark);
+}
+
+
+.duvidas-panel ul {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.duvidas-panel li.hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+
+.duvidas-panel .close-x {
+  position: absolute;
+  top: 10px;
+  right: 12px;
+  background: none;
+  border: none;
+  font-size: 30px;
+  cursor: pointer;
+  color: var(--fc-buttonsStandard);
+}
+
+.dark .duvidas-panel .close-x{
+  color: var(--fc-buttonsDark);
 }
